--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -6,7 +6,7 @@
 <a name="TOP"></a>
 
 <!--------------------------------------------------------------------------------------------------->
-<table>
+<table border=0>
   <tbody>
   <tr>
    <td rowspan="3" width="300"><img src="MenosBlocker.jpg" height="502"></td>
@@ -26,7 +26,7 @@
                <font size=+2>College of Arts&nbsp;<br>&amp; Sciences</font> </table></td></tr>
       </table>
    </td>
-   <td rowspan="3" width=300><img src="SolarEclipse.jpg" width=300></td>
+   <td rowspan="3" width=300><img src="Eclipse_2024.jpg" width=307></td>
    <td rowspan="3" width=180><img src="Before.jpg" width=175><br>
                              <img src="Annulus.jpg" width=175>
                              <img src="After.jpg" width=175><br></td>
@@ -71,6 +71,17 @@ Frank cancelled his attendance on 11 February 2024
 </tbody>
 </table>
 
+
+<!----------------------------------------------------------------------------------------------------->
+<hr>
+<!----------------------------------------------------------------------------------------------------->
+<!------------------------------------------------------------------------------------------------------------------------>
+<b><font size=+1 color=Maroon>Winner of the poster contest:</font>  &nbsp; Michail Savvas</b>.  &nbsp; &nbsp; 
+<!------------------------------------------------------------------------------------------------------------------------>
+<!------------------------------------------------------------------------------------------------------------------------>
+<b><font size=+1 color=Maroon>Runners up: &nbsp; &nbsp; </font>
+  Tomasz Mandziuk &nbsp;  and &nbsp; Suhan Zhong</b>.
+<!------------------------------------------------------------------------------------------------------------------------>
 
 <!----------------------------------------------------------------------------------------------------->
 <hr>
