--- a/teaching/17.1/TinCanTopology.html
+++ b/teaching/17.1/TinCanTopology.html
@@ -55,8 +55,9 @@ For the high slope lines, this is the circle that is the boundary edge of the to
 For the low slope lines, this is the circle that forms the edge of the M&ouml;bius band.
 We form the real porjective plane by glueing these two figures&ndash;the disc and the M&ouml;bius band&ndash;along this common edge.
 Warning, this is impossible to do in  <b>R</b><sup>3</sup> without a self-intersection in the surface.
-For fun, look up pictures of the Boy surface (someone's name, a student of David Hilbert), especially the sculpture of it outside the
-<a href="http://www.mfo.de/">Mathematisches Forschungsinstitut Oberwolfach</a>.
+For fun, look up pictures of the Boy surface (someone's name, a student of David Hilbert), especially the
+<a href="https://www.mfo.de/about-the-institute/history/boy-surface/the-boy-surface-at-oberwolfach">sculpture of it</a>
+outside the <a href="http://www.mfo.de/">Mathematisches Forschungsinstitut Oberwolfach</a>.
 <br><br>
 
 
@@ -66,5 +67,5 @@ For fun, look up pictures of the Boy surface (someone's name, a student of David
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Mon Apr 13 11:36:38 CDT 2020 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Subn Apr 14 21:36:38 PDT 2024 <!-- hhmts end -->
 </body> </html>
