--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -20,8 +20,8 @@ Piazza:
 <!--A <a href="../../Teaching_Evaluations.pdf">study about teaching evaluations</a>.--> 
 Information for
 <!--    Next time, when there is no coronavirus, you may need to add a week 15. 
-  <a href="weeks/W14.html">Week &Omega;</a>  &nbsp;
-  <a href="weeks/W13.html">Week 13</a>  &nbsp;   -->    
+  <a href="weeks/W14.html">Week &Omega;</a>  &nbsp;   --> 
+  <a href="weeks/W13.html">Week 13</a>  &nbsp;   
   <a href="weeks/W12.html">Week 12</a>  &nbsp;
   <a href="weeks/W11.html">Week 11</a>  &nbsp;
   <a href="weeks/W10.html">Week 10</a>  &nbsp; 
