--- a/teaching/24.1/weeks/W13.html
+++ b/teaching/24.1/weeks/W13.html
@@ -10,51 +10,52 @@
 <!--------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------->
-    <a href="http://piazza.com/tamu/spring2022/math629/home">Piazza Class page</a>.
+    <a href="http://piazza.com/tamu/spring2024/math629/home">Piazza Class page</a>.
 <!--------------------------------------------------------->
 <HR>
 <!-------------------------------------------------------------->
 
-<font color=maroon><h3>Week 13: 18 April 2022. </h3></font>
+<font color=maroon><h3>Week 13: 16 April 2022. </h3></font>
 <ul>
   <li><font color=maroon><B>Opening Remarks:</b></font>
  <br>
-  &nbsp; &nbsp; Get working on your  <a href="../Term_paper.html">term paper</a>.
-  Let me know what you are thinking to write about, read your sources, make an outline....
+  &nbsp; &nbsp; Now that you have completed the draft of your  <a href="../Term_paper.html">term paper</a>, 
+ it is now time to arrange peer feedback within your group.
+ I will read each draft, make comments, and send that to you in the next week or so.
  <br><br>
   
   &nbsp; &nbsp;
- The first chapter (21) concerns the development of Algebraic Number theory.
+ The first chapter (21) in our reading concerns the development of Algebraic Number theory.
  I like this topic; having had an influential undergraduate course in this topic of number fields and their rings of integers
  that also contained a fair bit of history.
-  This is a very beautiful topic concerning generalizations of the integers.
-  These 'rings of integers' were studied originally as part of attempts to prove Fermat's Last Theorem.
-  If unique factorization were to hold in them, that approach would have proven Fermat's Last Theorem.
-  This program was due in part to Sophie Germain, a pioneering woman in mathematics.
-  The truth being what it is, we had to move along and adapt to the lack of unique factorization.
-  That the theory of ideals was able to restore unique factorization led to a richer and more abstract connection between algebra and
-  geometry.
-  A modern perspective is to create a 'space' whose points are the ideals (actually the prime ideals).
-  This important theme in modern mathematics had its start in the 19th century study of these rings of integers.<br><br>
+ This is a very beautiful topic concerning generalizations of the integers.
+ These 'rings of integers' were studied originally as part of attempts to prove Fermat's Last Theorem.
+ If unique factorization were to hold in them, that approach would have proven Fermat's Last Theorem.
+ This program was due in part to Sophie Germain, a pioneering woman in mathematics.
+ The truth being what it is, we had to move along and adapt to the lack of unique factorization.
+ That the theory of ideals was able to restore unique factorization led to a richer and more abstract connection between algebra and
+ geometry.
+ A modern perspective is to create a 'space' whose points are the ideals (actually the prime ideals).
+ This important theme in modern mathematics had its start in the 19th century study of these rings of integers.<br><br>
   
-  &nbsp; &nbsp;
-  For Chapter 22 on Topology.
-  This culminates in a discussion of one of the great recent results in
-  mathematics, the proof of the Poincar&eacute; conjecture by Perleman, who along the way proved Thurson's geometrization
-  conjecture.
-  There were at least four Fields medals related to the settling of the Poincar&eacute; conjecture.
-  As part of Section 22.3, read up on the description of the real projective plane in
-  <a href="../../17.1/TinCanTopology.html">Tin Can Topology</a>.
-<!--  Also think about your Klein bottles, too.-->
+ &nbsp; &nbsp;
+ Chapter 22 is on Topology.
+ This culminates in a discussion of one of the great recent results in
+ mathematics, the proof of the Poincar&eacute; conjecture by Perleman, who along the way proved Thurson's geometrization
+ conjecture.
+ There were at least four Fields medals related to the settling of the Poincar&eacute; conjecture.
+ As part of Section 22.3, read up on the description of the real projective plane in
+ <a href="../../17.1/TinCanTopology.html">Tin Can Topology</a>.
+  You might also think about your Klein bottles, too.
 
-  <br><br>
-  &nbsp; &nbsp;
-  I ask you to read the story of groups in Chapter 23.
-  It is a bit technical, but was a major focus of algebra for about 30 years, and the story of the finite simple groups is one of the more
-  accessible parts of modern mathematics (In contrast: gerbes anyone?
-  or how about geometry over the field with one element? or Drinfeld's chtoucas?).
-  I hope that you appreciate the story of Conway's discovery of his groups, and the relation of these simple groups to exceptional
-  structures like the Golay code or the Leech Lattice (a mathematical news story in the past couple of years concerns sphere packing and the
+ <br><br>
+ &nbsp; &nbsp;
+ I ask you to read the story of groups in Chapter 23.
+ It is a bit technical, but was a major focus of algebra for about 30 years, and the story of the finite simple groups is one of the more
+ accessible parts of modern mathematics (In contrast: gerbes anyone?
+ or how about geometry over the field with one element? or Drinfeld's chtoucas?).
+ I hope that you appreciate the story of Conway's discovery of his groups, and the relation of these simple groups to exceptional
+ structures like the Golay code or the Leech Lattice (a mathematical news story in the past couple of years concerns sphere packing and the
   Leech lattice).
   Finally, the story of the Monster simple group, as well as the Moonshine conjecture (I understand that Stillwell gets the provenance of
   moonshine wrong here) is quite interesting.
@@ -67,7 +68,7 @@
 <!--    <dd> Read Bell's chapters on Dedekind and Kummer, and on Poincar&eacute;-->
   </li>
 
- <li><font color=maroon><b>Assignment:</b></font> Due Monday, 25 April. (HW 13)<br>
+ <li><font color=maroon><b>Assignment:</b></font> Due Monday, 22 April. (HW 13)<br>
    Here is a <a href="../HW/HW13.pdf">.pdf</a> and a  <a href="../HW/HW13.tex">LaTeX source</a> of the assignment.<br>
  <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope for homework submission</font>.
  
@@ -85,18 +86,6 @@
 <!-------------------------------------------------------------->
 <address></address>
 <!---------------------------------------------------------------------------->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-12943815-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-<!---------------------------------------------------------------------------->
-
-<!-- hhmts start -->Last modified: Mon Apr 13 11:53:09 CDT 2020 <!-- hhmts end -->
 
 <p>Last modified: Fri Apr 22 14:58:59 CDT 2022 by sottile</p>
 
