--- a/conferences/TAGS24/posters.html
+++ b/conferences/TAGS24/posters.html
@@ -35,11 +35,12 @@
 
   </tr>
 </table><br>
-<!---------------------------------------------------------------------------------------
-<b><font size=+1 color=Maroon>Winner of the poster contest:</font></b>.<br>--------------------------------->
 <!------------------------------------------------------------------------------------------------------------------------>
-<!--------------------------------------------------------------------------------------------
-<b><font size=+1 color=Maroon>Runner up: &nbsp; &nbsp; </font></b>.---------------------------->
+<b><font size=+1 color=Maroon>Winner of the poster contest:</font>  &nbsp; Michail Savvas</b>.<br>
+<!------------------------------------------------------------------------------------------------------------------------>
+<!------------------------------------------------------------------------------------------------------------------------>
+<b><font size=+1 color=Maroon>Runners up: &nbsp; &nbsp; </font>
+  Tomasz Mandziuk &nbsp;  and &nbsp; Suhan Zhong</b>.
 <!------------------------------------------------------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------------------------------------------------------>
