--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
    <!--------------------------------------------------------------------------------->   
    <!------   This is to fit in the rotation and cerdits  ---------------------------->   
      <table> 
-       <tr valign=bottom><td><a href="Frank.html"><IMG SRC="images/frank.jpg" ALT="Grand Canyon March 2023"></a><br>
-	   Photo Credit: Taylor Brysiewicz
+       <tr valign=bottom><td><a href="Frank.html"><IMG SRC="images/frank.jpg" ALT="Great American Eclipse 2024"></a><br>
+	   Solar Eclipse, 08-04-2024 in Hot Springs AK
+	 <!--<IMG SRC="images/frank.jpg" ALT="Grand Canyon March 2023"></a><br>  Photo Credit: Taylor Brysiewicz-->  
  <!--   </td><td>&nbsp;</td>
    <td valign=right class="rotate">Photo: Sarah Witherspoon</td>-->
    </tr></table>
@@ -391,7 +392,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Mon Mar 18 13:46:38 PDT 2024 by sottile</p>  
+<p>Last modified: Sun Apr 14 20:34:16 PDT 2024 by sottile</p>  
  </body>
 </html> 
 
