added last week

--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -19,8 +19,8 @@ Piazza:
 
 <!--A <a href="../../Teaching_Evaluations.pdf">study about teaching evaluations</a>.--> 
 Information for
-<!--    Next time, when there is no coronavirus, you may need to add a week 15. 
-  <a href="weeks/W14.html">Week &Omega;</a>  &nbsp;   --> 
+<!--    Next time, when there is no coronavirus, you may need to add a week 15.    --> 
+  <a href="weeks/W14.html">Week &Omega;</a>  &nbsp;
   <a href="weeks/W13.html">Week 13</a>  &nbsp;   
   <a href="weeks/W12.html">Week 12</a>  &nbsp;
   <a href="weeks/W11.html">Week 11</a>  &nbsp;
@@ -274,7 +274,7 @@ I have also been greatly helped by Professor Emeritus Fulling and Professor Emer
 
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Apr 19 09:41:25 CDT 2020--> <!-- hhmts end -->
-<p>Last modified: Mon Mar 25 23:02:49 EDT 2024 by sottile</p> 
+<p>Last modified: Mon Apr 22 13:31:23 PDT 2024 by sottile</p> 
 <!---------------------------------------------------------------------------------------------------->
 </body> </html>
 
