--- a/teaching/24.1/weeks/W14.html
+++ b/teaching/24.1/weeks/W14.html
@@ -10,15 +10,17 @@
 <!--------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------->
-    <a href="http://piazza.com/tamu/spring2018/math629/home">Piazza Class page</a>.
+    <a href="http://piazza.com/tamu/spring2024/math629/home">Piazza Class page</a>.
 <!--------------------------------------------------------->
 <HR>
 <!-------------------------------------------------------------->
 
-<font color=maroon><h3>Week &Omega;: 25 April 2022. </h3></font>
+<font color=maroon><h3>Week &Omega;: 23 April 2024. </h3></font>
 <ul>
   <li><font color=maroon><B>Opening Remarks:</b></font>
-  This is our last week.<br><br>
+    This is our last week.<br>
+
+    Your term paper is due next week.<br><br>
 
   &nbsp; &nbsp;
   The development of set theory, especially Cantor's revolutionary ideas, led us to finally develop a theory of infinity as a quantity, a notion that
@@ -34,31 +36,26 @@
   as well as his diagonal proof that there are more real numbers than integers&ndash;this is a topic I enjoy presenting when I talk to
   highschool students and in-service teachers.
   I aso had about 8-10 graduate courses on set theory, logic, and foundations, so I have a soft spot for this.
-  <br>  &nbsp; &nbsp;
-  In your reading, Stillwell makes an ommission on page 527; the sequence {<i>x<sub>i</sub></i>: <i>i</i> in <b>N</b>} needs to include all
-  real numbers, the construction does not work for every sequence, for example 1/2, 2/3, 3/4, 4/5, .....
-  <br>
-  &nbsp; &nbsp; Having re-read this chapter, I now do not like Stillwell's take on these foundational questions.
   <br>
    &nbsp; &nbsp;
 Let me add a bit to the ideas presented in Chapter 24.
 Some of the results, G&ouml;del's incompleteness theorem, the independence of the continuum hypothesis, and the negative solution to the halting
 problem, are of similar nature in that science has proven that there are limits to our knowledge&ndash;some things are not knowable.
-They have a similar feel to Heisenberg's uncertainty principle.
+  They have a similar feel to Heisenberg's uncertainty principle.
+  The chapter ends on some heady ideas.
   <br><br>
 
-
-<!--  &nbsp; &nbsp;
-  A brief introduction to ordinal numbers:   <a href="https://www.youtube.com/watch?v=nddefUNMEys">https://www.youtube.com/watch?v=nddefUNMEys</a>.
-<br><br>-->
+  You might find the following interesting:
+  <a href="https://www.youtube.com/watch?v=nddefUNMEys">A brief introduction to ordinal numbers</a> and its successor
+  <a href="https://www.youtube.com/watch?v=SjGSYHhYIAo">Part 2</a>.
+<br><br>
 
   &nbsp; &nbsp;
   Lastly, you will read about combinatorics, which is the study of counting or of discrete mathematical structures.
   While often derided as a mile wide and an inch deep, this mathemartical area has come into its own in the past 100 years, 
   and is increasingly important.
-  Many people argue that it should be taught instead of Calculus (recently, a friend from graduate school who gave a distingushed lecture at
-  Texas A&amp;M, made this point in a talk she gave&ndash;this is Kristin Lauter, the Research Manager for the Cryptography Group at Microsoft
-  Research)
+  Many people argue that it should be taught instead of Calculus (a few years ago, a friend from graduate school who gave a distingushed
+  lecture at Texas A&amp;M, made this point in a talk she gave&ndash;this is Kristin Lauter, who is a director of research at META)
   I also work in combinatorics, among other mathematical topics, so again I have a soft spot for it.
   Lest you think that my prejudices are guiding the last few weeks, I am also a huge fan of algebraic number theory, even though I do not 
   work in it.<br><br>
@@ -71,21 +68,20 @@ They have a similar feel to Heisenberg's uncertainty principle.
       <!--    <dd> Read Bell's chapter on Cantor.<br><br>-->
     <dd><b>Do:</b> Build your four-cube.
       Here are some <a href="../../../research/stories/hyperCube/index.html">instructions.</a><br>
-    The <a href="../HW/Cube_Parallel.pdf">cubes worksheet</a></dd>
+    The <a href="../pdfs/Cube_Parallel.pdf">cubes worksheet</a></dd>
   </li>
 
   <li><font color=maroon><b>Assignment:</b></font> Due Monday, 2 May 2022. (HW 14)<br>
    Here is a <a href="../HW/HW14.pdf">.pdf</a> and a  <a href="../HW/HW14.tex">LaTeX source</a> of the assignment.<br>
-<!--  <b>Email Frank about your term paper.</b><br>-->:
+
  <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope for homework submission</font>.
     <ol>
 
 <!--     <li>Do the exercise on the four-cube. What is the Euler characteristic of the <i>n</i>-cube?  By this I mean the alternating sum of the
          numbers of faces:  Number of vertices - number of edges + number of 2-faces - ... (-1)<sup><i>n</i>-1</sup> number of (<i>n</i>-1)-faces. </li>-->
     <li>In Chapter 24, do the exercises 24.2.1 and 24.2.2.</li>
-<li>In Chapter 25, do the exercises 25.5.2, 25.5.4, and 25.5.5</li>
-  <li><font color=red>Cubes worksheet and maybe a paragraph on the project.</font>   This last part of the assigmment is still under
-    construction.
+ <li>In Chapter 25, do the exercises 25.5.2, 25.5.4, and 25.5.5</li>
+  <li><font color=red>Cubes worksheet and a paragraph about your experience on the project.</font>  
     </li>
   </ol>
  </li>
@@ -95,19 +91,7 @@ They have a similar feel to Heisenberg's uncertainty principle.
 <HR>
 <!-------------------------------------------------------------->
 <address></address>
-<!---------------------------------------------------------------------------->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-12943815-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-<!---------------------------------------------------------------------------->
-<!-- hhmts start -->Last modified: Sun Apr 19 09:39:30 CDT 2020 <!-- hhmts end -->
- <p>Last modified: Mon May 02 06:22:39 CDT 2022 by sottile</p>
+ <p>Last modified: Mon Apr 22 13:32:33 PDT 2024 by sottile</p>
 
  
 </body> </html>
