--- a/talks.html
+++ b/talks.html
@@ -117,6 +117,12 @@
  <B><FONT SIZE=+1 color=brown>Upcoming Talks</FONT></B>
  <ul>
 
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map (New conjectured reality)</I></font>,
+    Seminar, UC Davis, 13 May 2024.     <a href="talks/24/WWSigns.txt">abstract</a>.
+  </li>
+  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Cardano and the Cubic</I></font>
@@ -134,6 +140,12 @@
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
+    <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry and Applications</I></font>,
+     Commutative Algebra/Algebraic Geometry Seminar, University of California, Berkeley, 23 April 2024.
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
      <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>,
      Berleley Spectral Theorem Seminar, 17 April 2024.
      <a href="talks/24/CPoDPO.txt">Abstract</a> 
@@ -145,7 +157,7 @@
      Berleley Combinatorics Seminar, 17 April 2024.
      <a href="talks/23/qMN.txt">Abstract</a>. 
   </li>
-   <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry and Applications</I></font>,
@@ -631,7 +643,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Mon Mar 18 14:33:20 PDT 2024 by sottile</p>  
+<p>Last modified: Sun Apr 28 09:37:59 PDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
