--- a/teaching/24.1/weeks/W11.html
+++ b/teaching/24.1/weeks/W11.html
@@ -49,7 +49,7 @@ Due Tuesday 30 April 2024.
   as well as the description of <a href="../../18.1/Hyperbolic_Soccerballs.html">constructions</a> with it.
     My time in Germany and the coronavirus crisis kept me from mailing you information for an activity based on this that I
     like to do with students and teachers.
-<font color=red>To Frank: Redo the construction page using lessons from Spring 2024:  High-level description and uniformity of vertices, and emphasize using two pieces of tape for each edge.<font>
+<font color=red>To Frank: Redo the construction page using lessons from Spring 2024:  High-level description and uniformity of vertices, and emphasize using two pieces of tape for each edge.</font>
 <!--  Last week I was supposed to go to a math teacher's circle in Austin and make hyperbolic footballs.
   (This has been postponed until the Autumn.)
   <br><br>-->
