added Granada talk

--- a/talks.html
+++ b/talks.html
@@ -119,11 +119,20 @@
 
   <!---------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map (New conjectured reality)</I></font>,
-    Seminar, UC Davis, 13 May 2024.     <a href="talks/24/WWSigns.txt">abstract</a>.
+    <FONT COLOR="AA00FF"><I>Bonds on Reality</I></font>, 
+    <a href="http://www.birs.ca/event/24w5197">Positive Solutions of Polynomial Systems Arising from Real-life Applications</a>,
+    BIRG IMAG, Granada, Spain, 
+    20 May 2024.
+    <a href="talks/24/RealBounds.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Cardano and the Cubic</I></font>
     Berkeley Math Circle Colloquium, 5 May 2024.
@@ -133,7 +142,7 @@
   <!---------------------------------------------------------------------------------------->
   <li>
      <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronski Map (New conjectured reality)</I></font>,
-     AMS Special Session in in Celebration of Bruce Reznick's retirement, AMS Western Section Meeting, SAn Francisco State University,
+     AMS Special Session in in Celebration of Bruce Reznick's retirement, AMS Western Section Meeting, San Francisco State University,
       4 May 2024.
      <a href="talks/24/WWSigns.txt">Abstract</a> 
   </li>
@@ -183,12 +192,6 @@
       <a href="talks/24/WWSigns.txt">abstract</a>.
   </li>
    <!---------------------------------------------------------------------------------------->
-   <!---------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
-  <!---------------------------------------------------------------------------------------->
    <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
@@ -324,7 +327,7 @@
  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
-    Graduate Student Organization Seminar, Texas A&ap;M University.
+    Graduate Student Organization Seminar, Texas A&amp;M University.
     September 28 2023,
     <a href="talks/23/GSO.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
@@ -643,7 +646,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sun Apr 28 09:37:59 PDT 2024 by sottile</p>  
+<p>Last modified: Wed May 15 13:12:43 PDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
