--- a/research/publications.html
+++ b/research/publications.html
@@ -77,7 +77,7 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
  <TR valign=CENTER><TD align=right>2
                  </TD> <TD>
    <!--------------------------------------------------------------->             
-   <!-------------      Version of August 2022     ----------------->
+   <!-------------      Version of March 2024     ------------------>
    <!--------------------------------------------------------------->             
    <TABLE><TR valign=center>
      <TD><A HREF="pdf/NNLA.pdf"><IMG SRC="images/pdf.gif"></A></TD>
@@ -101,29 +101,6 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
 
 <!------------------------------------------------------------------------>
  <TR valign=CENTER><TD align=right>3
-                 </TD> <TD>
-   <!--------------------------------------------------------------->             
-   <!-------------      Version of August 2022     ----------------->
-   <!--------------------------------------------------------------->             
-   <TABLE><TR valign=center>
-     <TD><A HREF="pdf/RealRoots.pdf"><IMG SRC="images/pdf.gif"></A></TD>
-     <TD><FONT COLOR="FF00FF">
-      <I>Real solutions to systems of polynomial equations</I></FONT>,
-      with 
-       <A HREF="https://jordylopez27.github.io/">Jordy Lopez</A>.
-       <A HREF="https://github.com/kmaluccio">Kelly Maluccio</A>.
-       <A HREF="https://tjyahl.github.io/">Thomas Yahl</A>.
-         <tt>arXiv.org/2208.05576</tt>.
-     </TD>
-    </TR>
-   </TABLE>
-<!--------------------------------------------------------------------->
-  </TD>
- </TR>
-<!------------------------------------------------------------------------>
-
-<!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>4
                  </TD> <TD>
 <!------------------------------------------------------------------------>
 <!-----------------        Version of 10 May 2021        ----------------->
@@ -173,7 +150,7 @@ Jump to <A HREF="#preprints">preprints</A>,
 
 
 <!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>5
+ <TR valign=CENTER><TD align=right>4
 </TD> <TD>
    <!--------------------------------------------------------------->             
    <!----------------    Version of May 2023     ------------------->
@@ -195,32 +172,7 @@ Jump to <A HREF="#preprints">preprints</A>,
 <!------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>6
-</TD> <TD>
-<!------------------------------------------------------------------------>
-<!-----------------    Version of 5 February 2024      ------------------->
-<!------------------------------------------------------------------------>
-<!------------------------------------------------------------------------>
-   <TABLE><TR valign=center>
-     <TD><A HREF="pdf/CPoDPO.pdf"><IMG SRC="images/pdf.gif"></A></TD> 
-   <TD><A HREF="https://mattfaust.github.io/CPODPO"><IMG SRC="images/abs.gif"></A></TD> 
-     <TD valign=center>
-       <FONT COLOR="FF00FF">
-      <i>Critical points of Discrete Periodic Operators</i></FONT>,
-       with 
-     <A HREF="https://mattfaust.github.io/">Matt Faust</A>.
-     Journal of Spectral Theory, to appear.
-       28 pages. <tt>arXiv.org/2206.13649</tt>
-     </TD>
-    </TR>
-   </TABLE>
-<!--------------------------------------------------------------------->
-  </TD>
- </TR>
-<!------------------------------------------------------------------------>
-
-<!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>7
+ <TR valign=CENTER><TD align=right>5
 </TD> <TD>
    <!--------------------------------------------------------------->             
    <!-------------      Version of August 2021     ----------------->
@@ -284,6 +236,56 @@ Jump to <A HREF="#preprints">preprints</A>,
 
 
 <TABLE>
+
+<!------------------------------------------------------------------------>
+ <TR valign=CENTER><TD align=right>6
+</TD> <TD>
+   <!--------------------------------------------------------------->             
+   <!-------------      Version of August 2022     ----------------->
+   <!--------------------------------------------------------------->             
+   <TABLE><TR valign=center>
+     <TD><A HREF="pdf/RealRoots.pdf"><IMG SRC="images/pdf.gif"></A></TD>
+     <TD><FONT COLOR="FF00FF">
+      <I>Real solutions to systems of polynomial equations</I></FONT>,
+      with 
+       <A HREF="https://jordylopez27.github.io/">Jordy Lopez</A>.
+       <A HREF="https://github.com/kmaluccio">Kelly Maluccio</A>.
+       <A HREF="https://tjyahl.github.io/">Thomas Yahl</A>.
+       Journal of Software for Algebra and Geometry, 
+        14-1 (2024), 87&ndash;95. DOI 10.2140/jsag.2024.14.87.
+         <tt>arXiv.org/2208.05576</tt>.
+     </TD>
+    </TR>
+   </TABLE>
+<!--------------------------------------------------------------------->
+  </TD>
+ </TR>
+<!------------------------------------------------------------------------>
+
+<!------------------------------------------------------------------------>
+ <TR valign=CENTER><TD align=right>7
+</TD> <TD>
+<!------------------------------------------------------------------------>
+<!-----------------    Version of 5 February 2024      ------------------->
+<!------------------------------------------------------------------------>
+<!------------------------------------------------------------------------>
+   <TABLE><TR valign=center>
+     <TD><A HREF="pdf/CPoDPO.pdf"><IMG SRC="images/pdf.gif"></A></TD> 
+   <TD><A HREF="https://mattfaust.github.io/CPODPO"><IMG SRC="images/abs.gif"></A></TD> 
+     <TD valign=center>
+       <FONT COLOR="FF00FF">
+      <i>Critical points of Discrete Periodic Operators</i></FONT>,
+       with 
+     <A HREF="https://mattfaust.github.io/">Matt Faust</A>.
+     Journal of Spectral Theory, <b>14</b> (2024), no. 1, pp. 1&ndash;35
+       <tt>arXiv.org/2206.13649</tt>
+     </TD>
+    </TR>
+   </TABLE>
+<!--------------------------------------------------------------------->
+  </TD>
+ </TR>
+<!------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------>
  <TR valign=CENTER><TD align=right>8
@@ -2407,7 +2409,7 @@ Zeitschrift</A>, <b>253</b>  (2006), no. 2, 361--385.
    <!-------                Version of September 2004      ------------->          
    <TABLE>
     <TR valign=center>
-x     <TD><A HREF="pdf/lowerBounds.pdf"><IMG SRC="images/pdf.gif"></A></TD>
+     <TD><A HREF="pdf/lowerBounds.pdf"><IMG SRC="images/pdf.gif"></A></TD>
      <TD><A HREF="abstracts/lowerBounds.html"><IMG SRC="images/abs.gif"></A></TD>
      <TD>
      <FONT COLOR="FF00FF"><I>Lower Bounds for Real Solutions
