--- a/conferences.html
+++ b/conferences.html
@@ -109,6 +109,14 @@
  <!---------------------------------------------------------------------------------------------------->
   <li> AMS Special session on
     <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
+    <a href="http://www.ams.org/meetings/"></a>Joint Mathematical Meetings 11 January 2025,
+    Seattle.
+    Co-organizing with <a href=""></a>Timothy Duff, <a href=""></a> Jesse Loucks-Tavitas, and <a href=""></a>Taylor Brysirwicz.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+  <li> AMS Special session on
+    <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
     <a href="http://www.ams.org/meetings/sectional/2319_program.html">AMS Central Section Meeting 14&ndash;15 September 2024</a>,
     University of Texas, San Antonio.
     Co-organizing with <a href="https://alpergur.xyz/">Alperen Ergur</a> and <a href="https://people.tamu.edu/~annejls/">Anne Shiu</a>.
@@ -145,13 +153,6 @@
    Supported by NSF grant DMS-2349244.
  </li>
  <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href=" https://www.math.tamu.edu/conferences/combinatexas/">CombinaTexas</a>,
-   Texas A&amp;M University,
-   23  &ndash; 24 March, 2024.
- </li>
- <!--------------------------------------------------------->
 
 </UL>
 
@@ -167,7 +168,7 @@
 <address></address>
 <!-- hhmts start Last modified: Sat Mar 18 09:34:04 CET 2023 <!-- hhmts end -->
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Wed Mar 13 01:25:25 PDT 2024 by sottile</p>  
+<p>Last modified: Wed Jun 05 10:05:41 EDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------------------------------->
 
 </body> </html>
