--- a/conferences/index.html
+++ b/conferences/index.html
@@ -18,6 +18,14 @@
  <!---------------------------------------------------------------------------------------------------->
   <li> AMS Special session on
     <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
+    <a href="http://www.ams.org/meetings/"></a>Joint Mathematical Meetings 11 January 2025,
+    Seattle.
+    Co-organizing with <a href=""></a>Timothy Duff, <a href=""></a> Jesse Loucks-Tavitas, and <a href=""></a>Taylor Brysirwicz.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+  <li> AMS Special session on
+    <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
     <a href="http://www.ams.org/meetings/sectional/2319_program.html">AMS Central Section Meeting 14&ndash;15 September 2024</a>,
     University of Texas, San Antonio.
     Co-organizing with <a href="https://alpergur.xyz/">Alperen Ergur</a> and <a href="https://people.tamu.edu/~annejls/">Anne Shiu</a>.
@@ -31,6 +39,15 @@
    <a href="MEGA2024/Call.txt">Call for Participation</a>.
  </li>
  <!---------------------------------------------------------------------------------------------------->
+
+</ul>
+
+
+<!------------------------------------------------------------------------>
+<hr>
+<!------------------------------------------------------------------------>
+<B><FONT SIZE=+1 color=brown>Past organizing</FONT></B>
+<UL>
  <!---------------------------------------------------------------------------------------------------->
 
  <li>
@@ -40,17 +57,6 @@
    Supported by NSF grant DMS-2349244.
  </li>
  <!---------------------------------------------------------------------------------------------------->
- 
-
- 
-</ul>
-
-
-<!------------------------------------------------------------------------>
-<hr>
-<!------------------------------------------------------------------------>
-<B><FONT SIZE=+1 color=brown>Past organizing</FONT></B>
-<UL>
  <!---------------------------------------------------------------------------------------------------->
  <li>
    SIAM <a href="https://userweb.ucs.louisiana.edu/~C00424602/SIAMTXLA2023">TX&ndash;LA Meeting</a>,
