--- a/research/collaborators.html
+++ b/research/collaborators.html
@@ -57,25 +57,23 @@ I have had the good fortune to work with the following mathematicians.
 
 <!--- SSym 2005  Loday 2006  CHA 2006  GL 2005 --->   
 <dd><IMG SRC="images/dots/four.png">
-    <A HREF="http://www.math.cornell.edu/~maguiar/">Marcelo Aguiar</A>,  
-    Cornell University. 
+    <A HREF="http://www.math.cornell.edu/~maguiar/">Marcelo Aguiar</A>,  Cornell University. 
 
 <!-- Assaf 2014 -->
 <dd><IMG SRC="images/dots/one.png">
     <A HREF="http://www-bcf.usc.edu/~shassaf/">Sami Assaf</A>, University of Southern California.
-
   
 <!-- BBS 2007   Rolle 2011   KhRoDual 2014  NNLA 2023-->
 <dd><IMG SRC="images/dots/four.png">
-    <A HREF="http://www.math.colostate.edu/~bates/">Dan Bates</A>, US Naval Academy.
+    <A HREF="https://www.usna.edu/Users/math/dbates/index.php">Dan Bates</A>, US Naval Academy.
 
 <!-- irrational 2007  brion 2009 -->
 <dd><IMG SRC="images/dots/two.png">
    <A HREF="http://math.sfsu.edu/beck/">Matthias Beck</A>, 
     San Francisco State University.
 
-<!--  qMurnaghan 2023 -->
-<dd><IMG SRC="images/dots/vapourware.png">
+<!--  qMurnaghan 2024 -->
+<dd><IMG SRC="images/dots/one.png">
     <A HREF="https://sites.google.com/site/carobenedettimath/">Carolina Benedetti</a>, Universidad de los Andes.
   
 <!-- switching 1996 -->  
@@ -84,14 +82,12 @@ I have had the good fortune to work with the following mathematicians.
 
 <!-- starting our careers  1999-->
 <dd><IMG SRC="images/dots/one.png">
-    <A HREF="http://myweb.lmu.edu/cbennett/">Curtis
-    Bennett</A>, Loyola Marymount University.
+    <A HREF="http://myweb.lmu.edu/cbennett/">Curtis Bennett</A>, Loyola Marymount University.
 
 <!--symmetry 1998    monoide 1999    hopf 1999     maratea 2000      skew 2002   shifted 2002
-    lagr-pieri 2002  CHAlgebra 2006  (Banff 2014)  qMurnaghan 2023 -->  
+    lagr-pieri 2002  CHAlgebra 2006  (Banff 2014)  qMurnaghan 2024 -->  
 <dd><IMG SRC="images/dots/nine.png">
-    <A HREF="http://www.math.yorku.ca/Who/Faculty/Bergeron">Nantel
-    Bergeron</A>, York University, Toronto, Canada.
+    <A HREF="http://www.math.yorku.ca/Who/Faculty/Bergeron">Nantel Bergeron</A>, York University, Toronto, Canada.
 
 <!--  few 2006  -->  
 <dd><IMG SRC="images/dots/one.png">
@@ -162,14 +158,13 @@ I have had the good fortune to work with the following mathematicians.
     <A HREF="http://www.tianranchen.org/">Tianran Chen</A>, 
       Auburn University at Montgomery.
 
-<!--  qMurnaghan 2023 -->
-<dd><IMG SRC="images/dots/vapourware.png">
-    <A HREF="https://sites.google.com/view/l-colmenarejo/home">Laura Colmenarejo</a>, U  Mass, Amherst.
+<!--  qMurnaghan 2024 -->
+<dd><IMG SRC="images/dots/one.png">
+    <A HREF="https://sites.google.com/view/l-colmenarejo/home">Laura Colmenarejo</a>, NCSU.
 
 <!-- MMCS 2010 -->
 <dd><IMG SRC="images/dots/one.png">
-    <A HREF="http://www.math.wisc.edu/~craciun/">Gheorghe Craciun</A>, 
-     University of Wisconsin, Madison.
+    <A HREF="http://www.math.wisc.edu/~craciun/">Gheorghe Craciun</A>, University of Wisconsin, Madison.
 
 <!-- 4triangles 2007 -->
 <dd><IMG SRC="images/dots/one.png">
@@ -442,9 +437,9 @@ I have had the good fortune to work with the following mathematicians.
 <dd><img src="images/dots/one.png">
       <A HREF="https://www.linkedin.com/in/korben-rusek-b050398a">Korben Rusek</A>.
   
-<!--  qMurnaghan 2023 -->
-<dd><IMG SRC="images/dots/vapourware.png">
-    <A HREF="http://lacim.uqam.ca/~saliola/">Franco Saliola</a>, UQAM.
+<!--  qMurnaghan 2024 -->
+<dd><IMG SRC="images/dots/one.png">
+    <A HREF="https://professeurs.uqam.ca/professeur/saliola.franco/">Franco Saliola</a>, UQAM.
 
 <!-- orbitopes 2011 -->
 <dd><IMG SRC="images/dots/one.png">
