--- a/advising/index.html
+++ b/advising/index.html
@@ -53,10 +53,16 @@
    </ul>
   </td>
   <td width=50></td>
-  <td><a href="team/Team2023_orig.jpg"><img src="team/Team2023.jpg"></a> <br>
-    <font color=blue size=+1><b>Team 2023</b></font> Left to right:
-    Jordy Lopez-Garc&iacute;a &nbsp; Suhan Zhong &nbsp;  Frank Sottile &nbsp;  Matt Faust &nbsp; <br>
-    Jonah Robinson &nbsp; Thomas Yahl &nbsp; C.J. Bott &nbsp;  <br>
+  <td><a href="team/Team2024_orig.jpg"><img src="team/Team2024.jpg"></a> <br>
+    <font color=blue size=+1><b>Team 2024</b></font> Left to right:
+    Daniel Dale &nbsp;
+    Somak Dutta &nbsp;
+    Jonah Robinson &nbsp;
+    Matt Faust &nbsp; 
+    Frank Sottile &nbsp;  <br>
+    Jordy Lopez-Garc&iacute;a &nbsp;
+    C.J. Bott &nbsp; 
+    Ruzho Sagayaraj &nbsp;
   </td>
  </tr>
 </table>
@@ -247,7 +253,7 @@
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <li>
-     <A HREF="http://mattfaust.github.io//">Matthew Faust</a>, 2019&ndash;.
+     <A HREF="http://mattfaust.github.io//">Matthew Faust</a>, 2019&ndash;2024.
    </li>
  <BR>
  <!------------------------------------------------------------------>
@@ -524,6 +530,13 @@
  <table>
  <tr>
   <!--------------------------------------------------------------------------------->
+  <td><a href="team/Team2023_orig.jpg"><img src="team/Team2023.jpg"></a> <br>
+    <font color=blue size=+1><b>Team 2023</b></font> Left to right:
+    Jordy Lopez-Garc&iacute;a &nbsp; Suhan Zhong &nbsp;  Frank Sottile &nbsp;  Matt Faust &nbsp; <br>
+    Jonah Robinson &nbsp; Thomas Yahl &nbsp; C.J. Bott &nbsp;  <br>
+  <!--------------------------------------------------------------------------------->
+  <td width=50></td>
+  <!--------------------------------------------------------------------------------->
   <td><a href="team/Team2022_orig.jpg"><img src="team/Team2022.jpg"></a> <br>
     <font color=blue size=+1><b>Team 2022</b></font> Left to right:
     Nate Welty &nbsp; Taylor Brysiewicz (emeritus) &nbsp; C.J. Bott &nbsp; Thomas Yahl &nbsp;
@@ -669,6 +682,6 @@
 Return to Frank Sottile's <A HREF="index.html">Homepage</A>
 <BR>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Wed Jan 31 16:58:02 GMT 2024 by sottile</p>  
+<p>Last modified: Sun Jun 16 16:05:52 CDT 2024 by sottile</p>  
 </BODY>
 </HTML>
