added BIRS talk

--- a/talks.html
+++ b/talks.html
@@ -116,12 +116,24 @@
  <!------------------------------------------------------------------------>
  <B><FONT SIZE=+1 color=brown>Upcoming Talks</FONT></B>
  <ul>
-
+   
   <!---------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>Bonds on Reality</I></font>, 
+    <FONT COLOR="AA00FF"><I>Frontiers of Arithmetic in Enumerative Geometry</I></font>, 
+    <a href="https://www.birs.ca/events/2024/5-day-workshops/24w5229">Computational Geometry</a>,
+    BIRS, Banff, Alberta Canada, 
+    2X June 2024.
+    <a href="talks/24/Frontiers.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------->
+
+
+   
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Bounds on Reality</I></font>, 
     <a href="http://www.birs.ca/event/24w5197">Positive Solutions of Polynomial Systems Arising from Real-life Applications</a>,
-    BIRG IMAG, Granada, Spain, 
+    BIRS IMAG, Granada, Spain, 
     20 May 2024.
     <a href="talks/24/RealBounds.txt">abstract</a>
   </li>
@@ -646,7 +658,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Wed May 15 13:12:43 PDT 2024 by sottile</p>  
+<p>Last modified: Wed Jun 19 17:04:26 CDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
